<resources>
        <string name="app_name">Mobile HRIS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="Continue">Continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back!</string>
</resources>